# demagnetize

./: .pre-commit-config.yaml  CHANGELOG.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
demagnetize/: __main__.py  core.py  peers.py  trackers.py  util.py
src/demagnetize/: __init__.py  __main__.py  bencode.py  consts.py  core.py  errors.py  peers.py  session.py  trackers.py  util.py
src/demagnetize/peer/: __init__.py  core.py  extensions.py  messages.py  subscribers.py
src/demagnetize/trackers/: __init__.py  base.py  http.py  udp.py
test/: conftest.py  test_bencode.py  test_http_tracker.py  test_main.py  test_peer.py  test_tracker_response.py  test_udp_tracker.py
