[metadata]
name = demagnetize
version = attr:demagnetize.__version__
description = Convert magnet URLs to .torrent files
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = demagnetize@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/demagnetize

keywords =
    ###

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    ###
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/demagnetize
    Bug Tracker = https://github.com/jwodder/demagnetize/issues

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = ~=3.7
install_requires =
    anyio ~= 3.5
    click >= 7.0
    httpx ~= 0.22
    torf ~= 3.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    demagnetize = demagnetize.__main__:main

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
