[metadata]
name = demagnetize
version = attr:demagnetize.__version__
description = Convert magnet links to .torrent files
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = demagnetize@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/demagnetize

keywords =
    bittorrent
    magnet link
    torrent

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Environment :: Console
    Framework :: AnyIO
    Topic :: Communications :: File Sharing
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/demagnetize
    Bug Tracker = https://github.com/jwodder/demagnetize/issues

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >=3.10
install_requires =
    anyio ~= 4.0
    attrs >= 20.1.0
    click >= 8.0
    click-loglevel ~= 0.5
    colorlog ~= 6.0
    httpx ~= 0.22
    torf ~= 3.1
    yarl ~= 1.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    demagnetize = demagnetize.__main__:main

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = False
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True

[mypy-torf.*]
ignore_missing_imports = True
